edit reports